# wireguard-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: config.py  dependencies.py  exceptions.py  logging.py  main.py
api/models/: __init__.py  constants.py  interfaces.py  peers.py
api/routers/: __init__.py  interfaces.py  peers.py  server.py
api/services/: __init__.py  wireguard.py
tests/: conftest.py  test_helpers.py  test_meta.py  test_models.py  test_routers.py  test_routers_interfaces.py  test_routers_peers.py  test_services.py  test_services_interfaces.py  test_services_peers.py
